# TelegramCrew

./: README.md  telegram_main.py
telegram_crew/: README.md  pyproject.toml
telegram_crew/src/telegram_crew/: crew.py  main.py
telegram_crew/src/telegram_crew/config/: agents.yaml  tasks.yaml
