[project]
name = "telegram_crew"
version = "0.1.0"
description = "telegram_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "composio>=0.10.3",
    "composio-crewai>=0.10.2",
    "crewai[tools]==1.7.2",
    "fastapi>=0.128.0",
    "fastapi-sso>=0.17.0",
    "litellm>=1.75.3",
    "pydantic[email]>=2.11.10",
]

[project.scripts]
telegram_crew = "telegram_crew.main:run"
run_crew = "telegram_crew.main:run"
train = "telegram_crew.main:train"
replay = "telegram_crew.main:replay"
test = "telegram_crew.main:test"
run_with_trigger = "telegram_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
